# py-typescript-generator

./: .bumpversion.cfg  .flake8  .gitignore  LICENSE  README.md  build.gradle  mypy.ini  pyproject.toml  settings.gradle
.github/workflows/: ci.yml  update_dependencies.yml
py_typescript_generator/: __init__.py
py_typescript_generator/class_parsers/: model_parser.py
py_typescript_generator/generation_pipeline/: typescript_generation_pipeline.py  typescript_generation_pipeline_builder.py
py_typescript_generator/model/: model.py  py_class.py  py_enum.py  py_field.py
py_typescript_generator/model_parser/: model_parser.py
py_typescript_generator/model_parser/class_parsers/: abstract_class_parser.py  dataclass_parser.py
py_typescript_generator/typescript_emitter/: typescript_emitter.py
py_typescript_generator/typescript_model_compiler/: ts_array.py  ts_enum.py  ts_field.py  ts_interface.py  ts_mapped_type.py  ts_model.py  ts_object_type.py  ts_type.py  typescript_model_compiler.py  well_known_types.py
py_typescript_generator/typing_utils/: __init__.py  typing_utils.py
tests/integration_tests/: test_model_parser_with_dataclass_parser.py  test_typescript_generation_pipeline.py
tests/unittests/: conftest.py  demo_parser_fixture.py  fixture_classes.py
tests/unittests/class_parsers/: test_dataclass_parser.py
tests/unittests/generation_pipeline/: test_typescript_generation_pipeline_builder.py
tests/unittests/model_parser/: test_model_parser.py
tests/unittests/typescript_emitter/: test_typescript_emitter.py
tests/unittests/typescript_model_compiler/: test_ts_enum.py  test_ts_type.py  test_ts_type_types.py  test_typescript_model_compiler.py
tests/unittests/typing_utils/: test_typing_utils.py
