[tool.poetry]
name = "py-typescript-generator"
version = "0.1.0"
description = "Genereate TypeScript types from Python classes"
authors = ["Jan Honsbrok <jan.honsbrok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ordered-set = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.931"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest-html = "^3.1.1"
typed-ast = "^1.5.2"
coverage = "^6.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
