[tool.poetry]
name = "py-typescript-generator"
version = "0.2.1"
description = "Generate TypeScript types from Python classes"
authors = ["Jan Honsbrok <jan.honsbrok@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
ordered-set = "^4.1.0"
typing-inspect = "^0.8.0"
case-converter = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.981"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest-html = "^3.1.1"
typed-ast = "^1.5.4"
coverage = "^6.4.4"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
